projects/compiler/test/typechecker/accessor/error_non_pub_field.out
Error at %FILE_NAME%:4:3
Illegal access for field 'a'
  |  f.a
       ^
Field 'a' is not marked as 'pub' within type 'Foo'
