projects/compiler/test/typechecker/accessor/error_non_pub_field.abra
import Foo from "./_exports"

val f = Foo(b: "asdf")
f.a
